# rust-wasm-gl

./: .gitignore  README.md  TODO  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: github-page.yaml
backend/: Cargo.toml  build.rs
backend-tests/: Cargo.toml
backend-tests/src/: lib.rs  position.rs
backend/shaders/: chunk.frag  chunk.vert  colorTrans.frag  colorTrans.vert  cube.frag  cube.vert  egui.frag  egui.vert  gizmo.frag  gizmo.vert  textureTransform.frag  textureTransform.vert  vertColor.vert  white.vert
backend/src/: basicmeshes.rs  camera.rs  chunk.rs  cube.rs  eguibackend.rs  game.rs  gameobject.rs  gizmo.rs  inputsystem.rs  lazygameobject.rs  lib.rs  material.rs  mesh.rs  meshrenderer.rs  quad.rs  shaders.rs  testworldgenerator.rs  textureloader.rs  time.rs  trianglescene.rs  utils.rs  world.rs
backend/src/core/: game.rs  mod.rs  time.rs
backend/src/graphics/: camera.rs  mesh.rs  meshrenderer.rs  mod.rs  shaders.rs  textureloader.rs  texure.rs
backend/src/gui/: eguibackend.rs  mod.rs
backend/src/math/: aabb.rs
backend/src/objects/: gameobject.rs  gizmo.rs  lazygameobject.rs  mod.rs  player.rs
backend/src/utils/: basicmeshes.rs  mod.rs  utils.rs
backend/src/world/: chunk.rs  chunkstreaming.rs  mod.rs  position.rs  testworldgenerator.rs  world.rs  worldgenerator.rs  worldrender.rs
backend/tests/: wasm-tests.rs
src/: main.ts
src/shaders/: phong.frag
