[package]
name = "backend"
version = "0.1.0"
authors = ["Vladimir Nachbaur <vizigr0u@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
glam = "0.25.0"
rand = "0.9.0-alpha.0"
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
glow = "0.13.1"
wasm-bindgen-futures = "0.4.41"
gloo = { version = "0.11.0", features = ['gloo-events'] }
log = "0.4.20"
console_log = { version = "1.0.0", optional = true }
egui = { version = "0.26.2", features = ['bytemuck', 'log', 'mint'] }
bytemuck = "1.15.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlUniformLocation',
    'WebGlProgram',
    'WebGlShader',
    'Window',
    'ImageBitmap',
    'HtmlImageElement',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Performance',
    'MouseEvent',
    'KeyboardEvent',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["console_error_panic_hook", "console_log", "wee_alloc"]
